correct id for graduation

--- a/main.html
+++ b/main.html
@@ -52,12 +52,12 @@
           <input type="text" class="form-control" id="college-input" required />
         </div>
         <div class="col-3">
-          <label for="graduation-year" class="form-label"
+          <label for="grad-year-select" class="form-label"
             >Graduation Year</label
           >
           <select
             class="form-select"
-            id="graduation-year"
+            id="grad-year-select"
             aria-label="choose graduation year"
             required
           >
@@ -70,12 +70,7 @@
         </div>
         <div class="col-3">
           <label for="roll-no-input" class="form-label">Roll No.</label>
-          <input
-            type="number"
-            class="form-control"
-            id="roll-no-input"
-            required
-          />
+          <input type="text" class="form-control" id="roll-no-input" required />
         </div>
       </div>
 
