--- a/main.html
+++ b/main.html
@@ -24,6 +24,7 @@
             id="first-name-input"
             required
           />
+          <div class="invalid-feedback">First name required!</div>
         </div>
         <div class="col-4">
           <label for="last-name-input" class="form-label">Last Name</label>
@@ -33,6 +34,7 @@
             id="last-name-input"
             required
           />
+          <div class="invalid-feedback">Last name required!</div>
         </div>
         <div class="col-4">
           <label for="email-input" class="form-label">Email Address</label>
@@ -43,6 +45,7 @@
             placeholder="xyz@abc.com"
             required
           />
+          <div class="invalid-feedback">Email required!</div>
         </div>
       </div>
 
@@ -50,6 +53,7 @@
         <div class="col-6">
           <label for="college-input" class="form-label">College</label>
           <input type="text" class="form-control" id="college-input" required />
+          <div class="invalid-feedback">Please provide a valid college.</div>
         </div>
         <div class="col-3">
           <label for="grad-year-select" class="form-label"
@@ -67,23 +71,28 @@
             <option value="2022">2022</option>
             <option value="2023">2023</option>
           </select>
+          <div class="invalid-feedback">
+            Please select a valid Graduation Year.
+          </div>
         </div>
         <div class="col-3">
-          <label for="roll-no-input" class="form-label">Roll No.</label>
+          <label for="roll-no-input" class="form-label">Roll No</label>
           <input type="text" class="form-control" id="roll-no-input" required />
+          <div class="invalid-feedback">Please provide a valid Roll no.</div>
         </div>
       </div>
 
       <div class="mb-3 form-check">
+        <label class="form-check-label" for="conditions-checkbox"
+          >Agree to terms and conditions</label
+        >
         <input
           type="checkbox"
           class="form-check-input"
-          id="conditions-input"
+          id="conditions-checkbox"
           required
         />
-        <label class="form-check-label" for="conditions-input"
-          >Agree to terms and conditions</label
-        >
+        <div class="invalid-feedback"></div>
       </div>
       <button type="submit" class="btn btn-primary">Submit form</button>
     </form>
