--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="col-3">
-          <label for="roll-no-input" class="form-label">Roll No</label>
+          <label for="roll-no-input" class="form-label">Roll No.</label>
           <input type="text" class="form-control" id="roll-no-input" required />
           <div class="invalid-feedback">Please provide a valid Roll no.</div>
         </div>
